<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~    Copyright 2021 Alexis Armin Huf
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.alexishuf.fastersparql</groupId>
  <artifactId>fastersparql-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>fastersparql-parent</name>
  <description>SPARQL protocol client library</description>
  <url>https://github.com/alexishuf/fastersparql</url>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Alexis Armin Huf</name>
      <email>alexishuf@gmail.com</email>
      <url>https://github.com/alexishuf/</url>
    </developer>
  </developers>

  <organization>
    <name>LAPESD</name>
    <url>http://lapesd.inf.ufsc.br/</url>
  </organization>

  <scm>
    <connection>scm:git:git://github.com/alexishuf/fastersparql.git</connection>
    <developerConnection>scm:git:git@github.com:alexishuf/fastersparql.git</developerConnection>
    <url>https://github.com/alexishuf/fastersparql</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
  </properties>

  <modules>
    <module>fastersparql-core</module>
    <module>fastersparql-netty</module>
    <module>fastersparql-hdt</module>
<!--    <module>fastersparql-operators-jena</module>-->
    <module>fastersparql-integration-tests</module>
    <module>fastersparql-bom</module>
  </modules>

  <dependencyManagement> <!-- Fix dependency versions -->
    <dependencies>
      <dependency> <!-- Logging -->
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.32</version>
      </dependency>
      <dependency> <!-- SLF4J implementation, not included on public lib jars -->
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.2.7</version>
      </dependency>
      <dependency> <!-- Annotations from checkerframework.org -->
        <groupId>org.checkerframework</groupId>
        <artifactId>checker-qual</artifactId>
        <version>3.21.0</version>
      </dependency>
      <dependency> <!-- Checkers from checkerframework.org -->
        <groupId>org.checkerframework</groupId>
        <artifactId>checker</artifactId>
        <version>3.21.0</version>
      </dependency>
      <dependency> <!-- reactive streams (not Flow, since we target JDK>=8) -->
        <groupId>org.reactivestreams</groupId>
        <artifactId>reactive-streams</artifactId>
        <version>1.0.3</version>
      </dependency>


      <!-- Pull BOMs for libraries -->

      <dependency> <!-- Used from fastersparql-core -->
        <groupId>io.netty</groupId>
        <artifactId>netty-bom</artifactId>
        <version>4.1.70.Final</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency> <!-- Used everywhere for tests -->
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.8.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency> <!-- Used on tests as a reactivestreams implementation -->
        <groupId>io.projectreactor</groupId>
        <artifactId>reactor-bom</artifactId>
        <version>2020.0.14</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement><!-- lock down plugins versions -->
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Set java version -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview --add-modules jdk.incubator.vector</argLine>
        </configuration>
      </plugin>
      <!-- Generate javadoc  -->
<!--      <plugin>-->
<!--        <artifactId>maven-javadoc-plugin</artifactId>-->
<!--        <configuration>-->
<!--          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>-->
<!--          <source>19</source>-->
<!--          &lt;!&ndash; Enable all warnings but the missing documentation &ndash;&gt;-->
<!--          <additionalJOption>&#45;&#45;enable-preview</additionalJOption>-->
<!--          <additionalJOption>-Xdoclint:all</additionalJOption>-->
<!--          <additionalJOption>-Xdoclint:-missing</additionalJOption>-->
<!--        </configuration>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <id>attach-javadoc</id>-->
<!--            <goals><goal>jar</goal></goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
    </plugins>
  </build>
</project>
